cleaning up code, minor adjustments, trying to fix problems on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,7 +13,7 @@
 	h1{
 		text-align:center;
 		color: white;
-		font-size: 50px;
+		font-size: 45px;
 	}
 }
 #foot{
@@ -24,7 +24,7 @@
 	h2{
 		text-align:center;
 		color: white;
-		font-size: 24px;
+		font-size: 20px;
 	}
 }
 
@@ -36,6 +36,7 @@
 	
 	#start{padding-top:1vh;}
 	#end{padding-bottom:1vh;}
+
 	.container{
 
 		height: 25%;
@@ -144,9 +145,7 @@
 				width:20%;
 				height:100%;
 				display:inline-block;
-				// margin-top: 25%;
 				position:relative;
-				// border:1px blue solid;
 			}
 
 			button{
@@ -189,7 +188,7 @@
 			.sounder:active{
 				// transition: margin-top 0.1s ease;
 				margin-top:4px;
-				background:rgb(0,80,80);
+				background:rgb(100,100,100);
 			}
 
 			.html_sounder{
@@ -226,7 +225,9 @@
 			margin-top:4px;
 		}
 
-		.button+.button{margin-left:6.666666666%;}
+		.button+.button{margin-left:5%;}
+		.button:nth-child(2){margin-left:1%;}
+		.button:nth-child(5){margin-right:1%;}
 
 	}
 
